--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 <body>
-<h1>More to come</h1>
-<p>Ethan and Yahya Github Page</p>
+    <h1>Ethan and Yahya Website</h1>
+    <p>We'll figure out more of the website later</p>
+    <p>We'll figure out more of the website later</p>
+    <p>We'll figure out more of the website later</p>
+    <p>We'll figure out more of the website later</p>
+    <p>We'll figure out more of the website later</p>
 </body>
 </html>
