--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="sidebar">
     <h2>Sidebar</h2>
     <ul>
-      <li><a href="/aboutme.md">About Me</a></li>
-      <li><a href="/console.md">Gaming Console</a></li>
+      <li><a href="/aboutme">About Me</a></li>
+      <li><a href="/console">Gaming Console</a></li>
     </ul>
   </div>
 
